# car-generative-models

./: README.md
dcgan/: README.md  gan.py  generate.py  gif.py  sliders.py
diffusion/: .gitignore  README.md  download.py  generate.py  pyproject.toml  train.py
diffusion/car_diffusion/: __init__.py  config.py  dataset.py  diffusion.py  model_factory.py  model_utils.py  trainer.py  transformer_model.py  unet_model.py  utils.py  visualization.py
diffusion/configs/: unet-base.yaml  uvit-base.yaml
